# ETFlow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.yml  generate_confs.ipynb  pyproject.toml  tutorial.ipynb
.github/workflows/: release.yml
configs/: drugs-base.yaml  drugs-o3-scaffold.yaml  drugs-o3.yaml  drugs-sfm.yaml  drugs-small.yaml  drugs-so3.yaml  qm9-base.yaml  qm9-o3-gaussian-scaffold.yaml  qm9-o3-gaussian.yaml  qm9-o3.yaml  qm9-so3-gaussian.yaml  qm9-so3.yaml
etflow/: __init__.py  _version.py  eval.py  eval_cov_mat.py  eval_prop.py  eval_xl.py  train.py  utils.py
etflow/commons/: __init__.py  chirality.py  configs.py  covmat.py  edge.py  featurization.py  io.py  sample.py  utils.py  xtb.py
etflow/data/: __init__.py  datamodule.py  dataset.py  geom.py
etflow/models/: __init__.py  base.py  loss.py  model.py  sfm.py  utils.py
etflow/networks/torchmd_net/: __init__.py  model_dynamics.py  modules.py  priors.py  tensornet.py  utils.py
etflow/schedulers/: CosineAnnealingWarmRestarts.py  __init__.py
scripts/: eval.py  eval_prop.py  eval_xl.py  prepare_data.py  prepare_eval_csv.py  preprocess.py  train.py  utils.py
